[gd_scene load_steps=6 format=2]

[ext_resource path="res://accesorios/sprites/enemies/eriz_1/eriz_1.png" type="Texture" id=1]
[ext_resource path="res://accesorios/scenes/enemies/enemy_1/enemy_1.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11, 5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 10.5 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8.9407e-07, -0.5 )
scale = Vector2( 0.34375, 0.421875 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="hit_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_area"]
position = Vector2( 0, 5 )
shape = SubResource( 3 )

[node name="kill_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill_area"]
position = Vector2( 0, -0.5 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="enemy" type="Node2D" parent="."]

[connection signal="body_entered" from="hit_area" to="." method="_on_hit_area_body_entered"]
[connection signal="body_entered" from="kill_area" to="." method="_on_kill_area_body_entered"]
